--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-static": "^1.0.0-next.39",
 		"@sveltejs/kit": "next",
 		"autoprefixer": "^10.4.8",
 		"eslint": "^8.16.0",
